--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cgpa-web-calculator",
   "version": "1.0.0",
   "description": "> ## Table of content",
+  "type": "module",
   "scripts": {
     "start": "node -r dotenv/config src/index.js",
     "dev": "nodemon --watch src",
@@ -9,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Oisavictor/CGPA-Web-Calculator.git"
+    "url": "https://github.com/Oisavictor/result-processing-app.git"
   },
   "author": "",
   "license": "GNU",
   "bugs": {
-    "url": "https://github.com/Oisavictor/CGPA-Web-Calculator/issues"
+    "url": "https://github.com/Oisavictor/result-processing-app/issues"
   },
-  "homepage": "https://github.com/Oisavictor/CGPA-Web-Calculator#readme",
+  "homepage": "https://github.com/Oisavictor/result-processing-app#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
