--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cgpa-web-calculator",
+  "name": "result-processing-app",
   "version": "1.0.0",
   "description": "> ## Table of content",
-  "type": "module",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node -r dotenv/config src/index.js",
+    "start": "ts-node --esm -r dotenv/config src/index.ts",
     "dev": "nodemon --watch src",
     "test": ""
   },
@@ -19,16 +19,24 @@
   },
   "homepage": "https://github.com/Oisavictor/result-processing-app#readme",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
+    "express-jwt": "^8.3.0",
+    "graphql": "^15.8.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.4",
-    "sequelize-cli": "^6.5.2"
+    "prisma": "^4.9.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
+    "type-graphql": "^1.1.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
     "nodemon": "^2.0.19"
   }
 }
